--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   , "express": "3.2.0"
   , "jade": "0.29.0"
   , "mongoose": "3.6.7"
+  , "moment": "*"
   }
 , "engines": {
     "node": "0.10.x"
