--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+Django==1.5.2
 Jinja2==2.7.1
 MarkupSafe==0.18
 Pygments==1.6
 Sphinx==1.2b1
 docutils==0.11
 ipython==1.0.0
+mock==1.0.1
+pyjade==2.0.2
+pymongo==2.5.2
+wsgiref==0.1.2
