added psycopg2 and repointed to postgresql

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
 Django==1.5.2
 Jinja2==2.7.1
+Markdown==2.3.1
 MarkupSafe==0.18
 Pygments==1.6
 Sphinx==1.2b1
+django-filter==0.7
+django-social-auth==0.7.25
+djangorestframework==2.3.7
 docutils==0.11
+httplib2==0.8
 ipython==1.0.0
 mock==1.0.1
+oauth2==1.5.211
+psycopg2==2.5.1
 pyjade==2.0.2
 pymongo==2.5.2
+python-openid==2.2.5
 wsgiref==0.1.2
