--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ python:
  - "2.6"
  - "2.7"
 install: pip install -r requirements.txt --use-mirrors
-script: python oabutton/manage.py test web bookmarklet
+script: python manage.py test web bookmarklet
