--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Markdown==2.3.1
 MarkupSafe==0.18
 Pygments==1.6
 Sphinx==1.2b1
+dj-static==0.0.5
 django-filter==0.7
 django-social-auth==0.7.25
 djangorestframework==2.3.7
@@ -16,4 +17,5 @@ psycopg2==2.5.1
 pyjade==2.0.2
 pymongo==2.5.2
 python-openid==2.2.5
+static==0.4
 wsgiref==0.1.2
