--- a/requirements.txt
+++ b/requirements.txt
@@ -6,17 +6,24 @@ Pygments==1.6
 Sphinx==1.2b1
 dj-static==0.0.5
 django-filter==0.7
+django-mongodb-engine==0.4.0
+django-mongonaut==0.2.19
 django-social-auth==0.7.25
 djangorestframework==2.3.7
+djangotoolbox==0.9.2
 docutils==0.11
 flake8
 gunicorn==18.0
 httplib2==0.8
+ipython==1.0.0
 mock==1.0.1
+mongoengine==0.8.4
+numpy==1.7.1
 oauth2==1.5.211
-psycopg2==2.5.1
-pyjade==2.0.2
-pymongo==2.5.2
+ordereddict==1.1
+plotly==0.4
+pymongo==2.6.2
 python-openid==2.2.5
+requests==1.2.3
 static==0.4
 wsgiref==0.1.2
