--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ Pygments==1.6
 Sphinx==1.2b1
 dj-static==0.0.5
 django-filter==0.7
+django-mongodb-engine==0.4.0
+django-mongonaut==0.2.19
 django-social-auth==0.7.25
 djangorestframework==2.3.7
 djangotoolbox==0.9.2
