--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,5 @@ install: pip install -r requirements.txt --use-mirrors
 script:
   - "flake8"
   - "python manage.py test web bookmarklet"
+services: 
+  - mongodb
