Search for relevant records in CORE after bookmarklet submission.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ python:
 install: pip install -r requirements.txt --use-mirrors
 script:
   - "flake8"
-  - "python manage.py test web bookmarklet"
+  - "python manage.py test web bookmarklet metadata"
