--- a/requirements.txt
+++ b/requirements.txt
@@ -4,25 +4,35 @@ Markdown==2.3.1
 MarkupSafe==0.18
 Pygments==1.6
 Sphinx==1.2b1
+bzr==2.5.1
 dj-static==0.0.5
 django-filter==0.7
+django-mongonaut==0.2.19
+django-openid-auth==0.5
 django-social-auth==0.7.25
 djangorestframework==2.3.7
 djangotoolbox==0.9.2
 docutils==0.11
-flake8
+flake8==2.0
 gunicorn==18.0
 httplib2==0.8
 ipython==1.0.0
+mccabe==0.2.1
 mock==1.0.1
 mongoengine==0.8.4
 nose==1.3.0
 numpy==1.7.1
 oauth2==1.5.211
+oauthlib==0.6.0
 ordereddict==1.1
+pep8==1.4.6
 plotly==0.4
+pyflakes==0.7.3
 pymongo==2.6.2
 python-openid==2.2.5
+python-social-auth==0.1.13
 requests==1.2.3
+requests-oauthlib==0.3.3
+six==1.4.1
 static==0.4
 wsgiref==0.1.2
