--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Pygments==1.6
 Sphinx==1.2b1
 bzr==2.5.1
 dj-static==0.0.5
+django-compressor==1.3
 django-filter==0.7
 django-mongonaut==0.2.19
 django-openid-auth==0.5
