disabled flake8 in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ python:
  - "2.7"
 install: pip install -r requirements.txt --use-mirrors
 script:
-  - "flake8"
+# Use flake8 in you editor dammit.
+#- "flake8"
   - "python manage.py test web bookmarklet metadata"
 services: 
   - mongodb
