--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Markdown==2.3.1
 MarkupSafe==0.18
 Pygments==1.6
 Sphinx==1.2b1
+bzr==2.5.1
 dj-static==0.0.5
 django-compressor==1.3
 django-filter==0.7
@@ -16,10 +17,12 @@ docutils==0.11
 flake8==2.0
 gunicorn==18.0
 httplib2==0.8
+ipython==1.0.0
 mccabe==0.2.1
 mock==1.0.1
 mongoengine==0.8.4
 nose==1.3.0
+numpy==1.7.1
 oauth2==1.5.211
 oauthlib==0.6.0
 ordereddict==1.1
