Re-enable flake8 on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ python:
  - "2.7"
 install: pip install -r requirements.txt --use-mirrors
 script:
-# Use flake8 in you editor dammit.
-#- "flake8"
+  - "flake8"
   - "python manage.py test web bookmarklet metadata"
 services: 
   - mongodb
