--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Django==1.5.2
+Fabric==1.8.0
 Jinja2==2.7.1
 Markdown==2.3.1
 MarkupSafe==0.18
@@ -9,11 +10,10 @@ django-appconf==0.6
 django-compressor==1.3
 django-filter==0.7
 django-mongonaut==0.2.19
-django-openid-auth==0.5
-django-social-auth==0.7.25
 djangorestframework==2.3.7
 djangotoolbox==0.9.2
 docutils==0.11
+ecdsa==0.10
 flake8==2.0
 gunicorn==18.0
 httplib2==0.8
@@ -23,19 +23,17 @@ mccabe==0.2.1
 mock==1.0.1
 mongoengine==0.8.4
 nose==1.3.0
-oauth2==1.5.211
-oauthlib==0.6.0
+numpy==1.7.1
 ordereddict==1.1
+paramiko==1.12.0
 pep8==1.4.6
 plotly==0.4
+pycrypto==2.6.1
 pyflakes==0.7.3
 pyjade==2.0.3
 pymongo==2.6.2
 python-dateutil==2.2
-python-openid==2.2.5
-python-social-auth==0.1.13
 requests==2.0.0
-requests-oauthlib==0.3.3
 six==1.4.1
 static==0.4
 urllib3==1.7.1
