--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Django==1.5.2
+Fabric==1.8.0
 Jinja2==2.7.1
 Markdown==2.3.1
 MarkupSafe==0.18
@@ -12,6 +13,7 @@ django-mongonaut==0.2.19
 djangorestframework==2.3.7
 djangotoolbox==0.9.2
 docutils==0.11
+ecdsa==0.10
 flake8==2.0
 gunicorn==18.0
 httplib2==0.8
@@ -19,16 +21,19 @@ httpretty==0.7.0
 ipython==1.0.0
 mccabe==0.2.1
 mock==1.0.1
-mongoengine==0.8.4
 nose==1.3.0
 ordereddict==1.1
+paramiko==1.12.0
 pep8==1.4.6
 plotly==0.4
+psycopg2==2.5.1
+pycrypto==2.6.1
 pyflakes==0.7.3
 pyjade==2.0.3
 pymongo==2.6.2
 python-dateutil==2.2
 requests==2.0.0
+requests-oauthlib==0.3.3
 six==1.4.1
 static==0.4
 urllib3==1.7.1
