--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,11 @@ Jinja2==2.7.1
 Markdown==2.3.1
 MarkupSafe==0.18
 Pygments==1.6
+South==0.8.4
 Sphinx==1.2b1
 dj-static==0.0.5
 django-appconf==0.6
-django-compressor==1.3
 django-filter==0.7
-django-mongonaut==0.2.19
 djangorestframework==2.3.7
 djangotoolbox==0.9.2
 docutils==0.11
